apps/staging/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: henshi-ingress
  namespace: henshi
  labels:
    name: henshi-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - henshi.neumanf.com
    - api.henshi.neumanf.com
    secretName: henshi-tls
  rules:
  - host: henshi.neumanf.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-service
            port: 
              number: 80
  - host: api.henshi.neumanf.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-service
            port: 
              number: 80
